# nuthatch-compositor

./: Cargo.toml  QUICK_REFERENCE.md  README.md  RENDERING_STATUS.md  run-anvil-test.sh  run-tty.sh  setup-dev.sh  setup-vm.sh  vm-setup-commands.sh
docs/: BARE_METAL_INCIDENT.md  DEVICE_INIT_COMPLETE.md  DRM_BACKEND_SETUP.md  DRM_ISSUES.md  DRM_PROGRESS.md  DRM_REWRITE.md  HYBRID_WORKFLOW.md  IMPLEMENTATION_PROGRESS.md  MILESTONE_4_OUTPUTS.md  MILESTONE_TRAITS_COMPLETE.md  PLAN_OF_RECORD.md  SESSION_2025_10_11.md  SESSION_COMPLETE.md  SESSION_SUMMARY.md  TESTING_DRM_MINIMAL.md  TESTING_TTY4.md  TTY4_TEST_RESULTS.md  VM_SETUP.md
resources/: cursor.rgba
src/: cursor.rs  drm.rs  drm_minimal.rs  drm_new.rs  main.rs  state.rs  winit.rs
