[package]
name = "nuthatch-compositor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
calloop = "0.14.3"
drm = "0.14.1"
slog = "2.8.1"
slog-async = "2.8.0"
slog-term = "2.9.2"
smithay = { version = "0.7.0", features = ["backend_drm", "backend_gbm", "backend_udev", "backend_libinput", "backend_session_libseat", "renderer_gl"] }
smithay-drm-extras = "0.1.0"
thiserror = "2.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
winit = "0.30.12"
xcursor = "0.3.8"
xkbcommon = "0.9.0"
